<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Momentum</string>
    <string name="activities_left">Create A Goal From The Menu</string>
    <string name="activities">Activities</string>
    <string name="verify_activity">Verify Activities</string>
    <string name="left">Activities</string>
    <string name="goal">Goal</string>
    <string name="goal_points">Points</string>
    <string name="user_exist">Create A User First</string>
    <string name="goal_exist">Create A Goal First</string>
    <string name="activity_exist">Complete An Activity First</string>
    <string name="congrads">Congratulations You Have Reached Your Goal!</string>
    <string name="start_over">Start Over</string>
    <string name="add_activity">Add An Activity</string>
    <string name="enter_activity">Enter Activity Name</string>
    <string name="create_activity_button">Add Activity</string>
    <string name="activity_header">Activity</string>
    <string name="complete_button">Complete</string>
    <string name="create_goal">Create A Goal</string>
    <string name="enter_goal">Enter Goal Name</string>
    <string name="create_goal_button">Add New Goal</string>
    <string name="create_user">User To Verify Activities</string>
    <string name="create_user_button">Add New User</string>
    <string name="create_user_name">Enter User Name</string>
    <string name="users">User</string>
    <string name="delete">Delete</string>
    <string name="password">Change Password</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_goal">Goal</string>
    <string name="menu_users">Users</string>
    <string name="quote">Quote. - Quote</string>
    <string name="progress">Current Progress</string>
    <string name="enter_password">Enter Password:</string>
    <string name="confirm_password">Confirm Password:</string>

</resources>
