<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.montyskew.momentum.Users">

    <TextView
        android:id="@+id/create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/create_user"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TableLayout
        android:id="@+id/create_user_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/create_user"
        android:background="#ffffff"
        android:stretchColumns="0,1">

        <TableRow
            android:id="@+id/new_user_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/create_user_name"
                android:inputType="textNoSuggestions"
                android:layout_width="180dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:hint="@string/create_user_name"/>

            <Button
                android:layout_width="80dp"
                android:id="@+id/create_user_button"
                android:text="@string/create_user_button" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace"
        android:layout_alignTop="@+id/create_user"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:id="@+id/users_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/users"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/active_user"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="30sp" />
            </TableRow>

        <TableRow>
            <Button
                android:layout_gravity="center_vertical"
                style="@style/Button"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:id="@+id/delete_user"
                android:text="@string/delete" />

            <Button
                android:layout_gravity="center_vertical"
                style="@style/Button"
                android:layout_height="70dp"
                android:layout_width="120dp"
                android:id="@+id/change_password"
                android:text="@string/password" />
        </TableRow>
    </TableLayout>


</RelativeLayout>