<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.montyskew.momentum.Goal">

    <TextView
        android:id="@+id/goal_user_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/user_exist"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/create_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/create_goal"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TableLayout
        android:id="@+id/create_goal_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/create_goal"
        android:background="#ffffff"
        android:stretchColumns="0,1">

        <TableRow
            android:id="@+id/new_user_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/create_goal_name"
                android:inputType="textNoSuggestions"
                android:layout_width="180dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:hint="@string/enter_goal"/>

            <Button
                android:layout_width="80dp"
                style="@style/Button"
                android:id="@+id/create_goal_button"
                android:text="@string/create_goal_button" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace"
        android:layout_alignTop="@+id/create_goal"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:id="@+id/goal_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goal"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:stretchColumns="0,1,2">

        <TableRow
            android:id="@+id/goal_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/goal"
                android:layout_span="2"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>
            <TextView
                android:text="@string/goal_points"
                android:layout_span="1"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/active_goal"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/active_goal_points"
                android:layout_gravity="center_vertical"
                android:layout_span="1"
                android:gravity="center"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="70dp"
                style="@style/Button"
                android:layout_span="3"
                android:id="@+id/delete_goal"
                android:text="@string/delete"
                android:layout_below="@+id/create_goal_table"
                android:layout_centerHorizontal="true" />


               </TableRow>
    </TableLayout>

</RelativeLayout>