<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.montyskew.momentum.Home">


    <TextView
        android:id="@+id/progress_congrads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/congrads"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/progress_user_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/user_exist"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/progress_goal_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/goal_exist"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/progress_activity_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/activity_exist"
        android:textColor="#ffffff"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/progress_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_activity_exist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/progress"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/progress_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_current"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:typeface="monospace" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@+id/progress_value"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="40dip"
        android:progressDrawable="@drawable/progress_bar" />

    <Button
        android:layout_height="80dp"
        android:id="@+id/start_over"
        style="@style/Button"
        android:layout_below="@+id/progress_image"
        android:layout_width="120dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/start_over" />

    <ImageView
        android:id="@+id/progress_image"
        android:layout_marginTop="10dp"
        android:src="@drawable/stick_figure"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/progress_bar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>